--- a/1.0/en/kap-orgusu/aralik-duzeni.html
+++ b/1.0/en/kap-orgusu/aralik-duzeni.html
@@ -1,6 +1,6 @@
 --- 
 layout: s1n0/varsayilan 
-title: Aralık Düzeni 
+title: Space System - Grid System
 ---
 	<p class="girlik">
 	  Ögeler arası boşluklar bırakarak estetik bir görünüme erişmenin kolay yolları var. Sabit genişlikte ögeleriniz varsa içinde bulunduğu ekran genişliğine göre doğal bir şekilde aralıklarla ögelerinizi yerleştirebilirsiniz. Dış sınırlardan başlayan bir düzen
