--- a/1.0/en/kap-orgusu/olcekler.html
+++ b/1.0/en/kap-orgusu/olcekler.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Kap Örgüsü Ölçekleri
+title: Scales - Grid System
 ---
 <div>
   <p>Aşağıdaki tabloda 24 parçalı gruba kadar belirlenmiş parça gruplarını görmektesiniz. Bir genişlikte tablodaki değerlere göre düzen kurmak istiyorsanız tip="değer" kuralı üzerinden sınıf yazarsınız. Örnek: data-gnl="4 8p" yani tüm ekranlarda içinde bulunduğu genişliğin 8'e bölünmüş eşit parçasından 4 tanesinin toplamı kadar genişlik kullanılacağını belirtir. </p>
