--- a/1.0/en/kap-orgusu/siralama.html
+++ b/1.0/en/kap-orgusu/siralama.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Kap Örgüsü Sıralama
+title: Order - Grid System
 ---
   <p class="girlik">Deveb kap örgüsünün sıralama özellikleri nesneleri kendi aralarında yazılış sırasından kopararay yeniden sıralandırmaya yarar ve nc birimiyle kullanılır.</p>
 
