--- a/1.0/tr/kap-orgusu/siralama.html
+++ b/1.0/tr/kap-orgusu/siralama.html
@@ -2,7 +2,7 @@
 layout: s1n0/varsayilan
 title: Kap Örgüsü Sıralama
 ---
-  <p class="girlik">Deveb kap örgüsünün sıralama özellikleri nesneleri kendi aralarında yazılış sırasından kopararay yeniden sıralandırmaya yarar ve nc birimiyle kullanılır.</p>
+  <p class="girlik">Kap örgüsünün sıralama özelliği ögeleri yazılış sırasından kopararak kendi aralarında yeniden sıralandırmaya yarar. nc birimiyle kullanılır.</p>
 
   <h3>Sıralama: <span data-metin="dikkat">1nc~24nc</span></h3>
   <p>Sıralama işlemi 1'den 24'e kadar gruplandırılabilir. Bir HTML etiketine 1nc ve 2nc tanımlaması yaptığınızda birbirleri arasında sıralama yapılır. Ekran örgüsüyle uyumludur. Mesela telefon ekranlarında bir nesneyi 2nc sırada gösterebilirken geniş ekranlarda başka bir sırada gösterebilirsiniz.</p>
