--- a/1.0/en/kap-orgusu/siralama.html
+++ b/1.0/en/kap-orgusu/siralama.html
@@ -13,7 +13,7 @@ title: Order - Grid System
       <div data-gnl="2th">
         2th: source code 1th order, view 2th order.
       </div>
-      <div data-gnl="1th" data-kçk="3th">
+      <div data-gnl="1th" data-sm="3th">
         3th: source code 2th order, view 3th order. In mobile, 1th order.
       </div>
       <div data-gnl="1th">
@@ -26,7 +26,7 @@ title: Order - Grid System
       <div data-gnl="2th">
         2th: source code 1th order, view 2th order.
       </div>
-      <div data-gnl="1th" data-kçk="3th">
+      <div data-gnl="1th" data-sm="3th">
         3th: source code 2th order, view 3th order. In mobile, 1th order.
       </div>
       <div data-gnl="1th">
