--- a/1.0/tr/kap-orgusu/bicim-duzeni.html
+++ b/1.0/tr/kap-orgusu/bicim-duzeni.html
@@ -26,9 +26,7 @@ title: Biçim Düzeni - Kap Örgüsü
 </div>
 <h2>Kap</h2>
 <p>
-  Tasarımlarınızı yaparken ana genişliği sabit genişlik olan tasarımlar yapın.
-  Aynı zamanda bu genişlikler ekran genişliğine göre uyarlanmıl sabit genişliklerde olsun.
-  Bunun için "kap" değiştirgesini kullanmanız yeterlidir.
+  Tasarımlarınızı yaparken ekranlara göre sabit genişlikler kullanın. Bunun için "kap" değiştirgesini kullanmanız yeterlidir.
 </p>
 <div class="örnek">
   <h3>Örnek</h3>
@@ -62,11 +60,7 @@ title: Biçim Düzeni - Kap Örgüsü
 
 <h2>Sığ</h2>
 <p>
-  Tasarımlarınızda yeri geldiğinde bir alana enine boyuna bir alan sığdırmak isteyebilirsiniz.
-  O zaman geldiğinde ekran örgüsü içerisinde "sığ" değiştirgesini kullanmanız yeterli
-  olacaktır. Böylelikle alan bulunduğu alana sığmış durumda olacaktır. Bazı durumlarda
-  "sütun" değiştirgesiyle birlikte kullanmanız gerekebilir. Daha iyi anlamak için
-  örnekleri inceleyiniz.
+  Enine boyuna bir alanı bulunduğu yere sığdırmak istediğiniz tasarımlarınız olabilir. O zaman "sığ" değiştirgesini kullanmanız yeterli olur. Bazı durumlarda "sütun" değiştirgesiyle birlikte kullanmanız gerebilir. Daha iyi anlamak için örnekleri inceleyiniz.
 </p>
 
 <div class="örnek">
