--- a/1.0/en/kap-orgusu/dizem-duzeni.html
+++ b/1.0/en/kap-orgusu/dizem-duzeni.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Rytm System - Grid System
+title: Rytm Layout - Grid System
 ---
 <p class="girlik">
   Düzenli bir biçimde tekrar eden aynı genişliklere sahip kapsamlar oluşturmak için dizem
