--- a/1.0/tr/kap-orgusu/aralik-duzeni.html
+++ b/1.0/tr/kap-orgusu/aralik-duzeni.html
@@ -3,8 +3,7 @@ layout: s1n0/varsayilan
 title: Aralık Düzeni 
 ---
 	<p class="girlik">
-	  Ögeler arası boşluklar bırakarak estetik bir görünüme erişmenin kolay yolları var. Sabit genişlikte ögeleriniz varsa içinde bulunduğu ekran genişliğine göre doğal bir şekilde aralıklarla ögelerinizi yerleştirebilirsiniz. Dış sınırlardan başlayan bir düzen
-	  veya dengeli aralık verilen bir düzen yapabilirsiniz. Daha fazlası aşağıda.
+	  Ögeler arası aralıklar bırakarak daha estetik görünüm oluşturun. Kendiliğinden hesaplanan aralık genişlikleri, sabit aralık genişlikleri gibi bir kaç seçenekten istediğinizi kullanın. Daha fazlası aşağıda.
 	</p>
 
 	<h3>araları-aralık & dengeli-aralık</h3>
@@ -70,8 +69,7 @@ title: Aralık Düzeni
 
 	<h3>araları-aralık-SAYI</h3>
 	<p>
-	  Ögeler arasında dış yanlarda aralık olmaksızın sabit genişlikte aralık bırakmak için bu özellik tam size göre. Kapsayıcı etikete "araları-aralık-1" değiştirgesini doğru şekilde yazdıktan sonra aşağıdaki gibi bir örneğe sahip olacaksınız. Sayı değerini
-	  1~3 arasında girebilirsiniz.
+	  Ögeler arasında sabit genişlikte aralık bırakmak için bu özelliği kullanın. Genişlik değerleri 1, 2, 3 sayılarıyla gösterilir. Değiştirgeyi "araları-aralık-1" gibi yazarak aşağıdaki gibi bir sonuç elde edersiniz.
 	</p>
 	<div class="örnek">
 	  <h3>Önizleme</h3>
