--- a/1.0/en/kap-orgusu/parca-duzeni.html
+++ b/1.0/en/kap-orgusu/parca-duzeni.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Piece System - Grid System
+title: Piece Layout - Grid System
 ---
   <p>
     Kap örgüsünün en çok kullanılan özelliği parça düzenidir. Parça düzeni kararlı
