--- a/1.0/en/kap-orgusu/dizem-duzeni.html
+++ b/1.0/en/kap-orgusu/dizem-duzeni.html
@@ -1,122 +1,116 @@
 ---
 layout: s1n0/varsayilan
-title: Rytm Layout - Grid System
+title: Rhythm Layout - Grid System
 ---
 <p class="girlik">
-  Düzenli bir biçimde tekrar eden aynı genişliklere sahip kapsamlar oluşturmak için dizem
-  düzeni geliştirilmiştir. Birer birer, ikişer ikişer, üçer üçer, ... oluşturmak
-  isterseniz 1r~24r arasındaki değiştirgeyi kullanmanız yeterlidir.
+  A rhythmic layout has been developed to create repetitive scopes of the same width. If you want to create one-one, two-two, three-three, ... you just need to use the parameter from 1r to 24r. "r" mean is "repeat".
 </p>
 <div class="örnek">
-  <h3>Örnek</h3>
+  <h3>Preview</h3>
   <div class="önizleme">
     <div data-gnl="2r">
       <div>
-        ikişer ikişer
+        two-two
       </div>
       <div>
-        ikişer ikişer
+        two-two
       </div>
       <div>
-        ikişer ikişer
+        two-two
       </div>
       <div>
-        ikişer ikişer
+        two-two
       </div>
       <div>
-        ikişer ikişer
+        two-two
       </div>
     </div>
   </div>
   {% highlight html %}
   <div data-gnl="2r">
     <div>
-      ikişer ikişer
+      two-two
     </div>
     <div>
-      ikişer ikişer
+      two-two
     </div>
     <div>
-      ikişer ikişer
+      two-two
     </div>
     <div>
-      ikişer ikişer
+      two-two
     </div>
     <div>
-      ikişer ikişer
+      two-two
     </div>
   </div>
   {% endhighlight %}
 </div>
 
-<h2>Parça Düzeniyle Birlikte Kullanım</h2>
+<h2>Use With Piece Layout</h2>
 <p>
-  Dizem düzenini parça düzeniyle birlikte kullanabilirsiniz. Düzenli genişlik tekrarları
-  birbirleriyle tam uyumlu olmak zorunda değildir. Neler yapabileceğiniz konusunda
-  güzel bir örneği hemen aşağıda inceleyebilirsiniz.
+  You can use rhythm layout with piece layout. Regular width repeats do not necessarily have to be exactly in line with each other. A good example of what you can do is below.
 </p>
 <div class="örnek">
   <h3>Örnek</h3>
   <div class="önizleme">
     <div data-gnl="4r">
       <div>
-        dörder dörder
+        four-four
       </div>
       <div data-gnl="2 4p">
         2 4p
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
     </div>
   </div>
   {% highlight html %}
   <div data-gnl="4r">
     <div>
-      dörder dörder
+      four-four
     </div>
     <div data-gnl="2 4p">
       2 4p
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
   </div>
   {% endhighlight %}
 </div>
 
-<h2>Genleşme Düzeniyle Birlikte Kullanım</h2>
+<h2>Use With Grow Layout</h2>
 <p>
-  Dizem düzenini genleşme düzeniyle birlikte kullanabilirsiniz. Düzenli genişlik tekrarları
-  birbirleriyle tam uyumlu olmak zorunda değildir. Neler yapabileceğiniz konusunda
-  güzel bir örneği hemen aşağıda inceleyebilirsiniz.
+  You can use rhythm layout with grow layout. Regular width repeats do not necessarily have to be exactly in line with each other. A good example of what you can do is below.
 </p>
 <div class="örnek">
-  <h3>Örnek</h3>
+  <h3>Preview</h3>
   <div class="önizleme">
     <div data-gnl="4r">
       <div data-gnl="1g">
@@ -126,19 +120,19 @@ title: Rytm Layout - Grid System
         2g
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
     </div>
   </div>
@@ -151,31 +145,29 @@ title: Rytm Layout - Grid System
       2g
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
   </div>
   {% endhighlight %}
 </div>
-<h2>Parça ve Genleşme Düzeniyle Birlikte Kullanım</h2>
+<h2>Use With Piece & Grow Layout</h2>
 <p>
-  Dizem düzenini parça ve genleşme düzeniyle birlikte kullanabilirsiniz. Düzenli genişlik tekrarları
-  birbirleriyle tam uyumlu olmak zorunda değildir. Neler yapabileceğiniz konusunda
-  güzel bir örneği hemen aşağıda inceleyebilirsiniz.
+  You can use rhythm layout with piece & grow layout. Regular width repeats do not necessarily have to be exactly in line with each other. A good example of what you can do is below.
 </p>
 <div class="örnek">
-  <h3>Örnek</h3>
+  <h3>Preview</h3>
   <div class="önizleme">
     <div data-gnl="4r">
       <div data-gnl="1g">
@@ -188,16 +180,16 @@ title: Rytm Layout - Grid System
         2 4p
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
       <div>
-        dörder dörder
+        four-four
       </div>
     </div>
   </div>
@@ -213,16 +205,16 @@ title: Rytm Layout - Grid System
       2 4p
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
     <div>
-      dörder dörder
+      four-four
     </div>
   </div>
   {% endhighlight %}
