--- a/1.0/en/kap-orgusu/siralama.html
+++ b/1.0/en/kap-orgusu/siralama.html
@@ -1,5 +1,5 @@
 ---
-layout: s1n0/varsayilan
+layout: s1n0/default
 title: Order - Grid System
 ---
   <p class="girlik">The order feature of the grid system removes items from the spelling order and reorders them among themselves. It is used with th unit.</p>
