deveb 1.0 css-en
deveb-en sürümü çıktı.

--- a/1.0/tr/kap-orgusu/dizem-duzeni.html
+++ b/1.0/tr/kap-orgusu/dizem-duzeni.html
@@ -3,9 +3,7 @@ layout: s1n0/varsayilan
 title: Dizem Düzeni - Kap Örgüsü
 ---
 <p class="girlik">
-  Düzenli bir biçimde tekrar eden aynı genişliklere sahip kapsamlar oluşturmak için dizem
-  düzeni geliştirilmiştir. Birer birer, ikişer ikişer, üçer üçer, ... oluşturmak
-  isterseniz 1r~24r arasındaki değiştirgeyi kullanmanız yeterlidir.
+  Aynı genişlikte tekrar eden kapsamlar oluşturmak için dizem düzeni geliştirilmiştir. Birer birer, ikişer ikişer, üçer üçer, ... oluşturmak isterseniz 1r~24r arasındaki değiştirgeyi kullanmanız yeterlidir.
 </p>
 <div class="örnek">
   <h3>Örnek</h3>
