--- a/temalar/sosero2/urunler.html
+++ b/temalar/sosero2/urunler.html
@@ -10,6 +10,7 @@ title: SOSERO ÜRÜNLER
 	{% include sosero2/hamburger-capraz.html %}
 </header>
 <main data-gnl="sığ">
+
  <section class="regular slider">
 
   <a href="/temalar/sosero/paketler.html" class="product-card">
@@ -27,6 +28,94 @@ title: SOSERO ÜRÜNLER
       </div>
     </div>
   </a>
+<a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a><a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a><a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
   <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
@@ -87,6 +176,80 @@ title: SOSERO ÜRÜNLER
       </div>
     </div>
   </a>
-
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
   </section>
 </main>
