--- a/temalar/sosero2/urunler.html
+++ b/temalar/sosero2/urunler.html
@@ -10,12 +10,11 @@ title: SOSERO ÜRÜNLER
 	{% include sosero2/hamburger-capraz.html %}
 </header>
 <main data-gnl="sığ">
-
  <section class="regular slider">
-
-  <a href="/temalar/sosero/paketler.html" class="product-card">
+  {% for num in (1..20) %}
+  <a href="/temalar/sosero2/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+      <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
     <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
@@ -28,228 +27,6 @@ title: SOSERO ÜRÜNLER
       </div>
     </div>
   </a>
-<a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a><a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a><a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
-  <a href="/temalar/sosero/paketler.html" class="product-card">
-    <div class="product-img">
-      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </a>
+  {% endfor %}
   </section>
 </main>
