--- a/temalar/sosero2/satisnoktalari.html
+++ b/temalar/sosero2/satisnoktalari.html
@@ -2,8 +2,8 @@
 layout: sosero2/varsayilan
 title: SOSERO Satış Noktaları
 ---
-<div data-kçk="o sütun kaymadan">
-  <div id="map" data-gnl="sığ sütun"></div>
+<div data-kçk="sığ kaymadan">
+  <div id="map" data-gnl="sığ"></div>
   <script>
 
         function initMap() {
