--- a/temalar/sosero2/html/site.html
+++ b/temalar/sosero2/html/site.html
@@ -18,87 +18,7 @@
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
           
           <script src="/temalar/sosero2/assets/js/slick.min.js" type="text/javascript" charset="utf-8"></script>
-          <script type="text/javascript">
-               $(document).on('ready', function() {
-
-
-
-            $('.regular').slick({
-              dots: true,
-              infinite: false,
-              speed: 300,
-              slidesToShow: 5,
-              slidesToScroll: 5,
-              responsive: [
-                {
-                  breakpoint: 1600,
-                  settings: {
-                    slidesToShow: 4,
-                    slidesToScroll: 4,
-                    infinite: true,
-                    dots: true
-                  }
-                },
-                {
-                  breakpoint: 1024,
-                  settings: {
-                    slidesToShow: 3,
-                    slidesToScroll: 3,
-                    infinite: true,
-                    dots: true
-                  }
-                },
-                {
-                  breakpoint: 600,
-                  settings: {
-                    slidesToShow: 2,
-                    slidesToScroll: 2
-                  }
-                },
-                {
-                  breakpoint: 480,
-                  settings: {
-                    slidesToShow: 1,
-                    slidesToScroll: 1
-                  }
-                }
-                // You can unslick at a given breakpoint now by adding:
-                // settings: "unslick"
-                // instead of a settings object
-              ]
-            });
-              $('.regular2').slick({
-              dots: true,
-              infinite: false,
-              speed: 300,
-              slidesToShow: 1,
-              slidesToScroll: 1
-              });
-              // HABERLER slick fix
-                      if ($('div.news-slider > article').length % 2 != 0) {
-                          $('div.news-slider').append('<article></article>');
-                          $('div.news-slider > article').eq(-2).find('.kesit').remove();
-                      }
-              $('.news-slider').slick({
-              dots: true,
-              infinite: false,
-              speed: 300,
-              slidesToShow: 2,
-              slidesToScroll: 2,
-              responsive: [
-                {
-                  breakpoint: 992,
-                  settings: {
-                    slidesToShow: 1,
-                    slidesToScroll: 1,
-                    infinite: true,
-                    dots: true
-                  }
-                }]
-              });
-
-              });
-            </script>
+          <script src="/temalar/sosero2/assets/js/slick.set.js" type="text/javascript" charset="utf-8"></script>
             <script type="text/javascript">
               $(document).on('ready', function() {
 
@@ -117,8 +37,8 @@
 
   <div data-gnl="sığ">
 
-    <div data-gnl="lt" data-byk="sütun 1g kaymadan">
-        <div id="content"></div>
+    <div data-gnl="lt" data-byk="1g sütun kaymadan">
+        <div id="content" data-byk="sığ"></div>
 
         <footer data-gnl="0">
           <nav data-gnl="_a">
